--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/membership_campaign/notify_membership_remittance.html
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/membership_campaign/notify_membership_remittance.html
@@ -63,14 +63,14 @@
 {% block content %}
     {{ block.super }}
     <div id="upload_form" class="main-container">
-        <h1>{% trans 'What this section does?' %}</h1>
+        <h1 class="step-section">{% trans 'What this section does?' %}</h1>
         <ul>
             <li>{% trans 'It notifies by email to the families that the membership fee will be charged soon.' %}</li>
             <li>{% trans 'It should be sent before the remittance is uploaded to the bank.' %}</li>
         </ul>
         <br/>
 
-        <h1>{% trans 'Review the following information' %}</h1>
+        <h1 class="step-section">{% trans 'Review the following information' %}</h1>
         <br/>
         <ul>
             <li>
@@ -89,7 +89,7 @@
 
         {% if result %}
             {% if result.error %}
-                <h1 class="hightlight">{% trans 'Errors sending mails' %}</h1>
+                <h1 class="step-section hightlight">{% trans 'Errors sending mails' %}</h1>
                 <ul>
                     <li>{% trans 'Error' %}: {{ result.error }}</li>
                     <li>{% trans 'Notified emails' %}: {{ result.success_emails|length }}
@@ -108,7 +108,7 @@
                     </li>
                 </ul>
             {% else %}
-                <h1 class="hightlight">{% trans 'Families notified' %}: {{ result.success_emails|length }}</h1>
+                <h1 class="step-section hightlight">{% trans 'Families notified' %}: {{ result.success_emails|length }}</h1>
                 <ul>
                     {% for email in result.success_emails %}
                         <li>{{ email }}</li>
@@ -117,7 +117,7 @@
             {% endif %}
         {% endif %}
 
-        <h1>{% trans 'Select an option' %}</h1>
+        <h1 class="step-section">{% trans 'Select an option' %}</h1>
         <br/>
         <form id="notify-form" method="post" action="{% url 'notify_members_campaign' %}">
           {% csrf_token %}
