--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/membership_campaign/base_membership_campaign.html
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/membership_campaign/base_membership_campaign.html
@@ -13,7 +13,8 @@
             font-weight: bold;
             color: #000;
             transition: background-color 0.2s, box-shadow 0.2s;
-            background-color: #8ed2f9;
+            border: 1px dashed #000000;
+            {#background-color: #8ed2f9;#}
         }
         .current-step {
             padding: 8px 16px;
@@ -22,11 +23,11 @@
             font-weight: bold;
             color: #fff;
             transition: background-color 0.2s, box-shadow 0.2s;
-            background-color: #6cc3d7;
+            background-color: #90e0ef;
             border: 1px solid #000000;
         }
         .not-current-step:hover {
-            background-color: deepskyblue;
+            background-color: #caf0f8;
             color: #fff;
             cursor: pointer;
             box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
@@ -40,7 +41,7 @@
             border-spacing: 4px;
         }
 
-        h1 {
+        h1.step-section {
             font-family: "Roboto", "Segoe UI", Arial, sans-serif;
             font-weight: normal;
             color: #333;
@@ -51,7 +52,7 @@
             border-radius: 4px;
         }
 
-        .hightlight {
+        h1.hightlight {
             background: #f5ec6f;
         }
     </style>
@@ -94,10 +95,8 @@
                 <td class="arrow-cell">
                     <img src="{% static 'images/right-arrow.png' %}" alt="Step Icon" width="15">
                 </td>
-                <td class="{% if current_step == 'notify_members_campaign' %}current-step{% else %}not-current-step{% endif %}">
-                    <a href="{% if remittance_id %}{% url 'notify_members_remittance' remittance_id %}{% else %}#{% endif %}">
-                        {% trans 'Notify remittance' %}
-                    </a>
+                <td class="{% if current_step|slice:":26" == "notify_members_remittance" %}current-step{% else %}not-current-step{% endif %}">
+                    <a href="{% url 'notify_members_remittance' %}">{% trans 'Notify remittance' %}</a>
                 </td>
             </tr>
         </table>
