add remittance details to notification UI: display remittance name, count, and links in notification templates; enhance workflows with "test notify" and disable functionality for missing remittances; refactor notifier classes with improved context and result handling

--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/membership_campaign/notify_membership_remittance.html
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/membership_campaign/notify_membership_remittance.html
@@ -67,12 +67,25 @@
         <ul>
             <li>{% trans 'It notifies by email to the families that the membership fee will be charged soon.' %}</li>
             <li>{% trans 'It should be sent before the remittance is uploaded to the bank.' %}</li>
+            <li>{% trans 'If there are more than one remittance for the active course, the last one generated will be notified.' %}</li>
         </ul>
         <br/>
 
         <h1 class="step-section">{% trans 'Review the following information' %}</h1>
         <br/>
         <ul>
+            <li>
+                <div class="mb-3">
+                  <label for="active_course_link" class="form-label"><a href="{{ active_course_remittance_url }}" target="_new">{% trans 'Remittance' %}</a></label>
+                  <input type="text" id="active_course_link" class="form-control" value="{{ active_course_remittance_name }}" disabled>
+                </div>
+            </li>
+            <li>
+                <div class="mb-3">
+                  <label for="remittances_count" class="form-label"><a href="{{ active_course_remittances_url }}" target="_new">{% trans 'Number of remittances' %}</a></label>
+                  <input type="text" id="remittances_count" class="form-control" value="{{ active_course_remittances_count }}" disabled>
+                </div>
+            </li>
             <li>
                 <div class="mb-3">
                   <label for="active_course_fee" class="form-label"><a href="{{ fee_url }}" target="_new">{% trans 'Fee' %}</a></label>
@@ -119,12 +132,13 @@
 
         <h1 class="step-section">{% trans 'Select an option' %}</h1>
         <br/>
-        <form id="notify-form" method="post" action="{% url 'notify_members_campaign' %}">
+        <form id="notify-form" method="post" action="{% url 'notify_members_remittance' %}">
           {% csrf_token %}
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <input type="button" value="{% blocktrans %}Send test emails to {{ test_email }}{% endblocktrans %}" onclick="submitWithUrlParam('test=true');">
+
+            <input type="button" {% if not active_course_remittance_url %}disabled title="{% trans 'Remittance not yet generated' %}"{% endif %} value="{% blocktrans %}Send test emails to {{ test_email }}{% endblocktrans %}" onclick="submitWithUrlParam('test=true');">
             &nbsp;
-            <input type="submit" value="{% trans 'Notify families by email' %}">
+            <input type="submit" {% if not active_course_remittance_url %}disabled title="{% trans 'Remittance not yet generated' %}"{% endif %} value="{% trans 'Notify families by email' %}">
             &nbsp;
             <input type="button" value="{% trans 'Cancel' %}" onclick="window.open('{% url 'admin:index' %}', '_blank');">
         </form>
