add payment date to remittance generation form; update logic to handle and save payment date; improve remittance generation and error handling workflows; fix translation and UI inconsistencies in remittance templates

--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/membership_campaign/base_membership_campaign.html
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/membership_campaign/base_membership_campaign.html
@@ -52,7 +52,7 @@
             border-radius: 4px;
         }
 
-        h1.hightlight {
+        h1.highlight {
             background: #f5ec6f;
         }
     </style>
