--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/membership_campaign/import_last_course_members.html
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/membership_campaign/import_last_course_members.html
@@ -85,7 +85,7 @@
 
         {% if members_copied %}
 
-            <h1 class="step-section hightlight">{% trans 'Last course members copied' %}</h1>
+            <h1 class="step-section highlight">{% trans 'Last course members copied' %}</h1>
             <ul>
                 <li>{% trans 'This course members' %}: {{ members_active_course }}</li>
             </ul>
