--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/membership_campaign/import_new_members.html
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/membership_campaign/import_new_members.html
@@ -3,6 +3,10 @@
 {% load i18n %}
 {% load static %}
 
+{% block breadcrumbs %}
+{% include "../campaign_breadcrumbs.html" %}
+{% endblock %}
+
 {% block instructions %}
     <div id="instructions" class="main-container">
         <h2>{% trans 'Instructions' %}</h2>
