refactor membership campaign views and templates: unify context methods with `get_context` replacing `get_extra_context`; enhance templates with new counts and URLs; improve active course member handling with dedicated methods; fix translation and structure inconsistencies

--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/membership_campaign/generate_membership_remittance.html
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/membership_campaign/generate_membership_remittance.html
@@ -23,7 +23,8 @@
     <div id="upload_form" class="main-container">
         <h1 class="step-section">{% trans 'What this section does?' %}</h1>
         <ul>
-            <li>{% trans 'It generates the membership remittance.' %}</li>
+            <li>{% trans 'It generates the membership remittance' %}</li>
+            <li>{% trans 'It should be generated once the new members and the last course members have been imported' %}</li>
         </ul>
         <br/>
 
