--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/membership_campaign/generate_membership_remittance.html
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/membership_campaign/generate_membership_remittance.html
@@ -1,4 +1,5 @@
-{% extends 'membership_campaign/base_membership_campaign_REMOVE.html' %}
+{% extends 'admin/base_site.html' %}
+
 {% load custom_filters %}
 {% load i18n %}
 {% load static %}
