update membership campaign step titles: add translations using `_()` for improved localization support

--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/membership_campaign/import_new_members.html
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/membership_campaign/import_new_members.html
@@ -3,6 +3,13 @@
 {% load i18n %}
 {% load static %}
 
+{% block extrahead %}
+    {{ block.super }}
+    <style>
+        {% include "./campaign_styles.css" %}
+    </style>
+{% endblock %}
+
 {% block breadcrumbs %}
 {% include "../campaign_breadcrumbs.html" %}
 {% endblock %}
