--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/campaign_steps.html
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/campaign_steps.html
@@ -1,3 +1,4 @@
+{% if steps %}
 <table>
     <tr>
         {% for step in steps %}
@@ -12,3 +13,4 @@
         {% endfor %}
     </tr>
 </table>
+{% endif %}
