--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/importers/base_import.html
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/importers/base_import.html
@@ -276,6 +276,10 @@
 {% endblock %}
 
 {% block content %}
+    {% block steps %}
+    {% include "../campaign_steps.html" %}
+    {% endblock %}
+
     <h1>{{ importer_title }}</h1>
 
     {% block upload_form %}
