update test email recipient and add dynamic form action script in membership campaign template: change default test email in settings and enhance template with script for dynamic URL parameter handling

--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/membership_campaign/notify_membership_remittance.html
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/membership_campaign/notify_membership_remittance.html
@@ -10,6 +10,16 @@
     <style>
         {% include "./campaign_styles.css" %}
     </style>
+
+    <script>
+        function submitWithUrlParam(param) {
+          const form = document.getElementById('notify-form');
+          const originalAction = form.action;
+          form.action = `${originalAction}?${param}`;
+          form.submit();
+          form.action = originalAction;
+        }
+    </script>
 {% endblock %}
 
 {% block breadcrumbs %}
