add `OpenMembershipCampaignView`: new view, URL, and template for guiding users on initiating a membership campaign; update campaign steps and admin menu for integration

--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/membership_campaign/import_last_course_members.html
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/membership_campaign/import_last_course_members.html
@@ -41,6 +41,12 @@
             </li>
             <li>
                 <div class="mb-3">
+                  <label for="active_course_members_count" class="form-label"><a href="{{ last_course_members_url }}" target="_new">{% trans 'Last course members' %}</a></label>
+                  <input type="text" id="active_course_members_count" class="form-control" value="{{ last_course_members_count }}" disabled>
+                </div>
+            </li>
+            <li>
+                <div class="mb-3">
                   <label for="families_renew_count" class="form-label"><a href="{{ families_renew_url }}" target="_new">{% trans 'Families to renew (last year members, with children in school and have not declined)' %}</a></label>
                   <input type="text" id="families_renew_count" class="form-control" value="{{ families_renew_count }}" disabled>
                 </div>
@@ -75,11 +81,6 @@
           {% csrf_token %}
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <input type="submit" value="{% trans 'Copy last course members' %}">
-            &nbsp;
-            <input type="button" value="{% trans 'Check last course members' %}" onclick="window.open('{{ last_course_members_url }}', '_blank');">
-            &nbsp;
-            <input type="button" value="{% trans 'Check this course members' %}" onclick="window.open('{{ active_course_members_url }}', '_blank');">
-            &nbsp;
             <input type="button" value="{% trans 'Cancel' %}" onclick="window.open('{% url 'admin:index' %}', '_blank');">
         </form>
     </div>
