refactor membership campaign views: rename `VIEW_NAME` constants for clarity; remove unused `IMPORTER_TITLE`; extract CSS to a new `base_import.css` for better reuse and maintainability

--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/importers/base_import.html
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/importers/base_import.html
@@ -8,248 +8,7 @@
 {% block extrahead %}
 
     <style>
-        .main-container {
-            margin-top: 20px;
-            margin-bottom: 20px;
-            border: 3px dotted #79AEC8;
-            border-radius: 15px;
-            padding: 10px 15px;
-        }
-        .list_item_label {
-            color: #BBBBBB;
-            font-size: 0.65rem;
-        }
-        .list_item_value {
-            color: black;
-            font-size: 0.8125rem;
-        }
-        .list_item_value_highlight {
-            color: black;
-            background-color: lightgoldenrodyellow;
-            font-size: 0.8125rem;
-            font-weight: bold;
-        }
-        .style_family {
-            background-color: #90e0ef;
-            padding: 1px 10px;
-            border-radius: 15px;
-        }
-        .style_parent1 {
-            background-color: #48cae4;
-            padding: 1px 10px;
-            border-radius: 15px;
-        }
-        .style_parent2 {
-            background-color: #90e0ef;
-            padding: 1px 10px;
-            border-radius: 15px;
-        }
-        .style_child1 {
-            background-color: #48cae4;
-            padding: 1px 10px;
-            border-radius: 15px;
-        }
-        .style_child2 {
-            background-color: #90e0ef;
-            padding: 1px 10px;
-            border-radius: 15px;
-        }
-        .style_child3 {
-            background-color: #48cae4;
-            padding: 1px 10px;
-            border-radius: 15px;
-        }
-        .style_child4 {
-            background-color: #90e0ef;
-            padding: 1px 10px;
-            border-radius: 15px;
-        }
-        .style_others {
-            background-color: #0077b6;
-            color: white;
-            padding: 1px 10px;
-            border-radius: 15px;
-        }
-        .formatted_column_value_error {
-            color: white;
-            background-color: #f94144;
-            font-size: 0.8125rem;
-            {#font-weight: bold;#}
-            border-radius: 15px;
-            padding: 1px 10px;
-        }
-        .formatted_column_value_warning {
-            color: black;
-            background-color: lightgoldenrodyellow;
-            font-size: 0.8125rem;
-            {#font-weight: bold;#}
-            border-radius: 15px;
-            padding: 1px 10px;
-        }
-        .formatted_column_value {
-            color: black;
-            font-size: 0.8125rem;
-        }
-        .imported_model_status_not_processed {
-            background-color: #f9c74f;
-            padding: 1px 10px;
-            color: darkslategrey;
-            border-radius: 15px;
-            margin-top: 3px;
-            display: inline-block;
-        }
-        .imported_model_status_not_modified {
-            padding: 1px 10px;
-            color: darkgray;
-            border: 1px dashed darkgray;
-            border-radius: 15px;
-            margin-top: 3px;
-            display: inline-block;
-        }
-        .imported_model_status_created {
-            background-color: #277da1;
-            padding: 1px 10px;
-            color: white;
-            border-radius: 15px;
-            margin-top: 3px;
-            display: inline-block;
-        }
-        .imported_model_status_updated {
-            {#background-color: #f8961e;#}
-            padding: 1px 10px;
-            color: darkgray;
-            border: 1px dashed darkgray;
-            border-radius: 15px;
-            margin-top: 3px;
-            display: inline-block;
-        }
-        .imported_model_status_error {
-            background-color: #f94144;
-            padding: 1px 10px;
-            color: lightgray;
-            border-radius: 15px;
-            margin-top: 3px;
-            display: inline-block;
-        }
-        .imported_model_status_omitted {
-            background-color: lightgray;
-            padding: 1px 10px;
-            color: darkslategrey;
-            border-radius: 15px;
-            margin-top: 3px;
-            display: inline-block;
-        }
-        .imported_model_error {
-            background-color: #f94144;
-            padding: 1px 10px;
-            color: whitesmoke;
-            border-radius: 15px;
-        }
-        .imported_model_warning {
-            background-color: #f9c74f;
-            padding: 1px 10px;
-            color: black;
-            border-radius: 15px;
-        }
-        .imported_model_changed_field {
-            background-color: #f8961e;
-            padding: 1px 10px;
-            color: black;
-            border-radius: 15px;
-            margin-top: 3px;
-            display: inline-block;
-        }
-        .row_state_error {
-            text-transform: uppercase;
-            padding: 6px;
-            color: white;
-            background-color: #f94144;
-            font-weight: bold;
-            border-radius: 15px;
-        }
-        .row_state_warning {
-            text-transform: uppercase;
-            padding: 6px;
-            color: black;
-            background-color: #f9c74f;
-            font-weight: bold;
-            border-radius: 15px;
-        }
-        .row_state_omitted {
-            text-transform: uppercase;
-            padding: 6px;
-            color: black;
-            background-color: #fed9b7;
-            font-weight: bold;
-            border-radius: 15px;
-        }
-        .row_state_ok {
-            text-transform: uppercase;
-            padding: 6px;
-            color: white;
-            background-color: #90be6d;
-            font-weight: bold;
-            border-radius: 15px;
-        }
-        #rows_detected {
-            background-color: cadetblue;
-            padding: 5px
-        }
-        #all_rows {
-            background-color: darkslategrey;
-            color: white;
-            padding: 15px;
-            border-radius: 15px;
-        }
-        #rows_imported_ok {
-            background-color: #90be6d;
-            color: white;
-            padding: 15px;
-            border-radius: 15px;
-        }
-        #rows_count {
-            font-weight: bold;
-            font-size: 30px;
-        }
-        #rows_imported_warning {
-            background-color: #f9c74f;
-            padding: 15px;
-            border-radius: 15px;
-        }
-        #rows_not_imported {
-            background-color: #f94144;
-            padding: 15px;
-            color: white;
-            border-radius: 15px;
-        }
-        #rows_omitted {
-            background-color: lightgray;
-            padding: 15px;
-            border-radius: 15px;
-        }
-        #simulation {
-            background-color: #f9c74f;
-            padding: 5px 15px;
-            border-radius: 15px;
-        }
-        #results_summary {
-            padding: 15px;
-            border-radius: 15px;
-            border: 3px dotted #79AEC8;
-        }
-        h1 {
-            font-size: 35px;
-        }
-        h2 {
-            font-size: 25px;
-        }
-        h3 {
-            font-size: 20px;
-        }
-        #results_summary li {
-            margin-bottom: 20px;
-            font-size: 20px;
-        }
+        {% include "./base_import.css" %}
     </style>
 
     <script>
@@ -280,7 +39,9 @@
     {% include "../campaign_steps.html" %}
     {% endblock %}
 
+    {% if importer_title %}
     <h1>{{ importer_title }}</h1>
+    {% endif %}
 
     {% block upload_form %}
     <div id="upload_form" class="main-container">
